Update ctf manual .tex file.
Make link in ctf manual .pdf absolute rather than absolute.

--- a/ctf/manual/ctf_manual.tex
+++ b/ctf/manual/ctf_manual.tex
@@ -29,8 +29,8 @@
 The following videos show a quick walkthrough of setting up the SEED Labs CTF and a quick tour of its usage:
 
 \begin{itemize}
-	\item \href{run:./videos/SEED_CTF_setup_part1.mp4}{CTFd and \texttt{.zip} import}
-	\item \href{run:./videos/SEED_CTF_setup_part2.mp4}{SEED Labs CTF tour}
+	\item \href{run:https://github.com/seed-labs/seed-labs/blob/master/ctf/manual/videos/SEED_CTF_setup_part1.mp4}{CTFd and \texttt{.zip} import}
+	\item \href{run:https://github.com/seed-labs/seed-labs/blob/master/ctf/manual/videos/SEED_CTF_setup_part2.mp4}{SEED Labs CTF tour}
 \end{itemize}
 
 \subsection{CTFd}
